[package]
name = "kaisy_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
lazy_static = {version="1.4.0", features=["spin_no_std"]}
spin= "0.9.8"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

